--- a/style.css
+++ b/style.css
@@ -20,13 +20,17 @@ body{
 }  */
 
 
-#faq{
-    display: flex;
-    color: white;
-    justify-content: center;
-    align-items: center;
+@media screen and (max-width: 520px) {
+    .FAQ img{
+        margin-top: 100px;
+    }
 }
 
+@media screen and (min-width: 630px){
+    .FAQ img{
+        margin-top: 50px;
+    }
+}
 
 
 .footer{
